cluster/apps/mb-scheduler/mb-scheduler-backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mb-scheduler-backend
  namespace: mb-scheduler
  labels:
    app: mb-scheduler-backend
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mb-scheduler-backend
  template:
    metadata:
      labels:
        app: mb-scheduler-backend
    spec:
      containers:
        - name: django
          image: ghcr.io/shadyf/mb-backend:sha-42ba302
          imagePullPolicy: IfNotPresent
          #          ports:
          #            - protocol: TCP
          #              containerPort: 8000
          volumeMounts:
            - name: static-folder
              mountPath: /app/staticfiles
          resources:
            requests:
              cpu: 10m
              memory: 300Mi
            limits:
              memory: 300Mi
        # NGINX container to server static files
        - name: nginx
          image: nginx:1.31.4
          ports:
            - protocol: TCP
              containerPort: 80
          volumeMounts:
            - name: static-folder
              mountPath: /static/
            - name: nginx-config
              mountPath: /etc/nginx/conf.d/
          resources:
            requests:
              cpu: 10m
              memory: 100Mi
            limits:
              memory: 100Mi

      imagePullSecrets:
        - name: ghcr-login-secret
      volumes:
        - name: static-folder
          emptyDir:
            sizeLimit: 500Mi
        - name: nginx-config
          configMap:
            name: mb-scheduler-backend-nginx-conf
