cluster/apps/mb-scheduler/mb-scheduler-backend/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: mb-scheduler-backend-svc
  namespace: mb-scheduler
spec:
  type: ClusterIP
  selector:
    app: mb-scheduler-backend
  ports:
    - protocol: TCP
      port: 8000
